--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ hr {
 .center {
   width: 60%;
   border-radius: 12px;
-  margin: 10% 0 10% 0;
+  margin: 5% 0;
   display: flex;
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0.37);
@@ -70,12 +70,6 @@ hr {
     margin: 0;
     border: none;
   }
-  .downButton .button{
-    display: block;
-  }
-  .sj button{
-    display: none;
-  }
 }
 .button {
   margin: 20px;
@@ -111,12 +105,66 @@ hr {
 }
 .list ol {
   color: aliceblue;
-  padding: 40px 40px 15px;
-}
-.downButton{
+  padding: 10px 60px 10px 40px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  max-height: 65vh;
+  margin: 0;
 }
-.downButton button {
+.list ol::-webkit-scrollbar{
   display: none;
+}
+#myUL li{
+  width: 100%;
+  margin: 10px 0;
+  font-size: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 20px;
+  cursor: pointer;
+  list-style-type: none;
+  background: rgba(238, 238, 238, 0.1);
+  font-size: 18px;
+  transition: 0.2s;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border-radius: 5px;
+}
+.close {
+
+  left: 100%;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
+
+.close:hover {
+  background-color: #ff1100;
+  color: white;
+}
+ol li:nth-child(odd) {
+  background: #9089891f;
+}
+ol li.checked {
+  background: #888;
+  color: #fff;
+  text-decoration: line-through;
+}
+ol li.checked::before {
+  content: '';
+  position: absolute;
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 10px;
+  left: 16px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
 }
